fix(core):z-index nav and timeline

--- a/src/scss/custom/_timeline.scss
+++ b/src/scss/custom/_timeline.scss
@@ -32,7 +32,7 @@
     align-items: center;
     position: absolute;
     top: -$timeline-pin-circle-size * 0.5;
-    z-index: 5;
+    z-index: 4;
     left: calc($timeline-padding / 2);
     .pin-icon {
       width: $timeline-pin-circle-size;
